# strata-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRATE_TEST_AUDIT.md  Cargo.toml  LICENSE  PRODUCTION_READINESS_REPORT.md  README.md  STORY_6_SUMMARY.md  TESTING_AUDIT_REPORT.md  audit-findings.md
audit-tests/: Cargo.toml
audit-tests/src/: lib.rs
audit-tests/tests/: issue_838.rs  issue_839.rs  issue_843.rs  issue_844.rs  issue_845.rs  issue_846.rs  issue_847.rs  issue_850.rs  issue_851.rs  issue_852.rs  issue_853.rs  issue_855.rs  issue_856.rs  issue_859.rs  issue_860.rs  issue_861.rs  issue_862.rs  issue_864.rs  issue_868.rs  issue_874.rs  issue_878.rs  issue_882.rs  issue_883.rs  issue_887.rs  issue_893.rs  issue_895.rs  issue_899.rs  issue_900.rs  issue_903.rs  issue_912.rs  issue_917.rs  issue_918.rs  issue_919.rs  issue_921.rs  issue_922.rs  issue_923.rs  issue_924.rs  issue_925.rs  issue_926.rs  issue_927.rs  (+33 more)
blackbox-tests/: Cargo.toml
blackbox-tests/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: desugar.rs  lib.rs
crates/api/src/facade/: event.rs  impl_.rs  json.rs  kv.rs  mod.rs  state.rs  trace.rs  types.rs  vector.rs
crates/api/src/substrate/: event.rs  impl_.rs  json.rs  kv.rs  mod.rs  retention.rs  run.rs  state.rs  trace.rs  transaction.rs  types.rs  vector.rs
crates/concurrency/: Cargo.toml
crates/concurrency/src/: conflict.rs  lib.rs  manager.rs  payload.rs  recovery.rs  snapshot.rs  transaction.rs  validation.rs  wal_writer.rs
crates/concurrency/tests/: concurrent_tests.rs  m2_integration_tests.rs
crates/core/: Cargo.toml
crates/core/src/: branch_types.rs  error.rs  json.rs  key.rs  lib.rs  limits.rs  primitive_ext.rs  run_types.rs  search_types.rs  traits.rs  types.rs  value.rs
crates/core/src/contract/: branch_name.rs  entity_ref.rs  mod.rs  primitive_type.rs  run_name.rs  timestamp.rs  version.rs  versioned.rs  versioned_history.rs
crates/core/src/primitives/: event.rs  json.rs  mod.rs  state.rs  vector.rs
crates/durability/: Cargo.toml
crates/durability/src/: encoding.rs  lib.rs  m7_recovery.rs  m7_wal_manager.rs  m7_wal_reader.rs  m7_wal_types.rs  m7_wal_writer.rs  recovery.rs  recovery_manager.rs  run_lifecycle.rs  snapshot.rs  snapshot_types.rs  transaction_log.rs  wal.rs  wal_entry_types.rs  wal_manager.rs  wal_reader.rs  wal_types.rs  wal_writer.rs
crates/durability/src/branch_bundle/: error.rs  mod.rs  reader.rs  types.rs  wal_log.rs  writer.rs
crates/durability/src/codec/: identity.rs  mod.rs  traits.rs
crates/durability/src/compaction/: mod.rs  tombstone.rs  wal_only.rs
crates/durability/src/database/: config.rs  handle.rs  mod.rs  paths.rs
crates/durability/src/disk_snapshot/: checkpoint.rs  reader.rs  writer.rs
crates/durability/src/format/: manifest.rs  mod.rs  primitives.rs  segment_meta.rs  snapshot.rs  wal_record.rs  writeset.rs
crates/durability/src/recovery/: coordinator.rs  legacy.rs  mod.rs  replayer.rs
crates/durability/src/retention/: mod.rs  policy.rs
crates/durability/src/run_bundle/: error.rs  mod.rs  reader.rs  types.rs  wal_log.rs  writer.rs
crates/durability/src/testing/: crash_harness.rs  mod.rs  reference_model.rs
crates/durability/src/wal/: config.rs  legacy.rs  mod.rs  mode.rs  reader.rs  writer.rs
crates/durability/tests/: corruption_simulation_test.rs  corruption_test.rs  cross_primitive_atomicity.rs  incomplete_txn_test.rs  recovery_invariants.rs  replay_test.rs
crates/engine/: Cargo.toml
crates/engine/benches/: primitive_benchmarks.rs  transaction_benchmarks.rs
crates/engine/src/: background.rs  branch_ops.rs  bundle.rs  coordinator.rs  database.rs  instrumentation.rs  lib.rs  recovery_participant.rs  replay.rs  run.rs  transaction_ops.rs
crates/engine/src/database/: builder.rs  config.rs  mod.rs  registry.rs  transactions.rs
crates/engine/src/durability/: buffered.rs  inmemory.rs  mod.rs  strict.rs  traits.rs
crates/engine/src/primitives/: event.rs  event_log.rs  extensions.rs  json.rs  json_store.rs  kv.rs  mod.rs  run_handle.rs  run_index.rs  searchable.rs  space.rs  state.rs  state_cell.rs
crates/engine/src/recovery/: mod.rs  participant.rs  replay.rs
crates/engine/src/search/: index.rs  manifest.rs  mod.rs  recovery.rs  searchable.rs  segment.rs  tokenizer.rs  types.rs
crates/engine/tests/: adversarial_tests.rs  branch_isolation_tests.rs  branch_lifecycle_tests.rs  business_logic_tests.rs  concurrency_tests.rs  crash_simulation_test.rs  critical_audit_tests.rs  cross_primitive_tests.rs  database_open_test.rs  database_transaction_tests.rs  m4_fast_path_equivalence.rs  m4_pooling_tests.rs  memory_profiling.rs  primitives_cross_tests.rs  recovery_tests.rs  replay_invariants.rs  run_isolation_tests.rs  run_lifecycle_tests.rs  vector_transaction_tests.rs  versioned_conformance_tests.rs
crates/executor/: Cargo.toml
crates/executor/src/: bridge.rs  command.rs  convert.rs  error.rs  executor.rs  json.rs  lib.rs  output.rs  session.rs  strata.rs  types.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: fuser.rs  hybrid.rs  lib.rs  llm_client.rs  scorer.rs
crates/intelligence/tests/: embed_model_lifecycle_tests.rs  embed_pipeline_tests.rs
crates/primitives/: Cargo.toml
crates/primitives/benches/: primitive_benchmarks.rs
crates/primitives/src/: event_log.rs  extensions.rs  json_store.rs  kv.rs  lib.rs  run_handle.rs  run_index.rs  searchable.rs  state_cell.rs  trace.rs
crates/primitives/tests/: adversarial_tests.rs  business_logic_tests.rs  cross_primitive_tests.rs  m4_fast_path_equivalence.rs  recovery_tests.rs  run_isolation_tests.rs  versioned_conformance_tests.rs
crates/search/: Cargo.toml
crates/search/src/: fuser.rs  hybrid.rs  index.rs  lib.rs  scorer.rs  tokenizer.rs
crates/search/tests/: api_contracts.rs  determinism.rs
crates/storage/: Cargo.toml
crates/storage/src/: cleaner.rs  index.rs  lib.rs  primitive_ext.rs  registry.rs  sharded.rs  snapshot.rs  stored_value.rs  ttl.rs  unified.rs
crates/storage/tests/: compaction_tests.rs  crash_scenarios.rs  integration_tests.rs  stress_tests.rs
docs/: faq.md  (+8 more)
(+1059 files in other folders)
