[package]
name = "in-mem"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/concurrency",
    "crates/durability",
    "crates/primitives",
    "crates/engine",
    "crates/api",
    "crates/search",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["in-mem contributors"]
license = "MIT"
repository = "https://github.com/anibjoshi/in-mem"

[workspace.dependencies]
# Core dependencies shared across crates
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
dashmap = "5"
rustc-hash = "1.1"
smallvec = "1.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for future network layer)
tokio = { version = "1.35", features = ["full"] }

# Serialization
rmp-serde = "1.1"

# Testing
proptest = "1.4"
rand = "0.8"
tempfile = "3.8"
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.bench]
inherits = "release"

[features]
default = []
perf-trace = []  # Enable per-layer timing instrumentation for M4

[dependencies]
in-mem-core = { path = "crates/core" }
in-mem-storage = { path = "crates/storage" }
in-mem-concurrency = { path = "crates/concurrency" }
in-mem-durability = { path = "crates/durability" }
in-mem-engine = { path = "crates/engine" }

[dev-dependencies]
criterion = "0.5"
tempfile = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
in-mem-primitives = { path = "crates/primitives" }

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "m1_storage"
harness = false

[[bench]]
name = "m2_transactions"
harness = false

[[bench]]
name = "m3_primitives"
harness = false

[[bench]]
name = "m4_performance"
harness = false

[[bench]]
name = "m4_facade_tax"
harness = false

[[bench]]
name = "m4_contention"
harness = false

[[bench]]
name = "m5_performance"
harness = false
