[package]
name = "strata"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/concurrency",
    "crates/durability",
    "crates/primitives",
    "crates/engine",
    "crates/api",
    "crates/search",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Strata contributors"]
license = "MIT"
repository = "https://github.com/anibjoshi/strata"

[workspace.dependencies]
# Core dependencies shared across crates
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
dashmap = "5"
rustc-hash = "1.1"
smallvec = "1.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for future network layer)
tokio = { version = "1.35", features = ["full"] }

# Serialization
rmp-serde = "1.1"
byteorder = "1.5"

# Testing
proptest = "1.4"
rand = "0.8"
tempfile = "3.8"
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Lazy initialization
once_cell = "1.18"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.bench]
inherits = "release"

[features]
default = []
perf-trace = []  # Enable per-layer timing instrumentation for M4
# Basic comparison benchmarks (redb, LMDB, SQLite)
comparison-benchmarks = ["dep:redb", "dep:heed", "dep:rusqlite"]
# Enable USearch for vector comparisons (requires C++ build tools)
usearch-enabled = ["dep:usearch"]

[dependencies]
strata-core = { path = "crates/core" }
strata-storage = { path = "crates/storage" }
strata-concurrency = { path = "crates/concurrency" }
strata-durability = { path = "crates/durability" }
strata-engine = { path = "crates/engine" }

# Optional SOTA comparison dependencies (enable with --features=comparison-benchmarks)
redb = { version = "2.0", optional = true }
heed = { version = "0.20", optional = true }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"], optional = true }
usearch = { version = "2.0", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
proptest = { workspace = true }
parking_lot = { workspace = true }
strata-primitives = { path = "crates/primitives" }
strata-search = { path = "crates/search" }
uuid = { workspace = true }
crc32fast = "1.3"

# =============================================================================
# FUNCTIONAL BENCHMARKS (New Structure)
# =============================================================================
# These are organized by functional category rather than milestone.
# Note: Additional benchmarks (eventlog, statecell, vector, transactions,
# contention) will be added incrementally.

# Primitive-specific benchmarks
[[bench]]
name = "primitives_kvstore"
harness = false

# =============================================================================
# LEGACY BENCHMARKS (Milestone-based - kept for reference/comparison)
# =============================================================================
# These will be deprecated once the new functional benchmarks are validated.

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "m1_storage"
harness = false

[[bench]]
name = "m2_transactions"
harness = false

[[bench]]
name = "m3_primitives"
harness = false

[[bench]]
name = "m4_performance"
harness = false

[[bench]]
name = "m4_facade_tax"
harness = false

[[bench]]
name = "m4_contention"
harness = false

[[bench]]
name = "m5_performance"
harness = false

[[bench]]
name = "m6_search"
harness = false

[[bench]]
name = "m8_vector"
harness = false

[[bench]]
name = "cross_primitive"
harness = false

[[bench]]
name = "industry_comparison"
harness = false
