[package]
name = "audit-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
strata-core = { path = "../crates/core" }
strata-storage = { path = "../crates/storage" }
strata-concurrency = { path = "../crates/concurrency" }
strata-durability = { path = "../crates/durability" }
strata-engine = { path = "../crates/engine" }
strata-executor = { path = "../crates/executor" }
strata-intelligence = { path = "../crates/intelligence" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }
parking_lot = "0.12"
crc32fast = "1.3"
sha2 = "0.10"
