[package]
name = "strata-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
strata-primitives = { path = "../primitives" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, optional = true }
base64 = "0.22"

[features]
default = ["embedded"]
embedded = []
rpc = ["tokio"]
mcp = ["tokio"]

[dev-dependencies]
tempfile = { workspace = true }
