[package]
name = "strata-concurrency"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
strata-core = { path = "../core" }
strata-storage = { path = "../storage" }
strata-durability = { path = "../durability" }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
static_assertions = "1.1"
tempfile = { workspace = true }
