[package]
name = "in-mem-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
