[package]
name = "strata-durability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
strata-core = { path = "../core" }
strata-storage = { path = "../storage" }
bincode = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
crc32fast = "1.3"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
