[package]
name = "in-mem-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
in-mem-core = { path = "../core" }
in-mem-storage = { path = "../storage" }
in-mem-concurrency = { path = "../concurrency" }
in-mem-durability = { path = "../durability" }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
chrono = { workspace = true }
criterion = "0.5"

[[bench]]
name = "transaction_benchmarks"
harness = false
