[package]
name = "strata-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Command execution layer for Strata database"

[dependencies]
# Internal crates
strata-core = { path = "../core" }
strata-api = { path = "../api" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Encoding
base64 = { workspace = true }

# UUIDs for RunId
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
