[package]
name = "strata-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Command execution layer for Strata database"

[features]
default = []
embed = ["strata-intelligence/embed", "strata-engine/embed"]
expand = ["strata-intelligence/expand"]
rerank = ["strata-intelligence/rerank"]

[dependencies]
# Internal crates
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
strata-intelligence = { path = "../intelligence" }
strata-security = { path = "../security" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Encoding
base64 = { workspace = true }

# UUIDs for RunId
uuid = { workspace = true }

# Datetime parsing
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
