[package]
name = "strata-intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "BUSL-1.1"
repository.workspace = true
publish = false
description = "Intelligence layer for Strata — derived operations over primitives"

[features]
default = []
embed = ["dep:ureq", "dep:tar", "dep:zstd"]
expand = ["dep:ureq"]
rerank = ["dep:ureq"]

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
ureq = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
