[package]
name = "strata-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level primitives for Strata agent database"

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
strata-concurrency = { path = "../concurrency" }
strata-durability = { path = "../durability" }
strata-storage = { path = "../storage" }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5"

[[bench]]
name = "primitive_benchmarks"
harness = false
