[package]
name = "in-mem-search"
version = "0.1.0"
edition = "2021"
description = "Search infrastructure for in-mem (M6 Retrieval Surfaces)"
license = "MIT"

[dependencies]
in-mem-core = { path = "../core" }
in-mem-engine = { path = "../engine" }
in-mem-primitives = { path = "../primitives" }
dashmap = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = { version = "3" }
