[package]
name = "strata-search"
version = "0.1.0"
edition = "2021"
description = "Search infrastructure for Strata (M6 Retrieval Surfaces)"
license = "MIT"
publish = false

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
dashmap = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = { version = "3" }
