[package]
name = "strata-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
strata-core = { path = "../core" }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# WAL and storage format dependencies
crc32fast = "1.3"
byteorder = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
